force-app/main/default/objects/Case_Plan__c/Case_Plan__c.object-meta.xml
<CustomObject>
    <description>The formal case plan for an Intake — what we're working toward with this survivor. Parent record for Case_Goal__c (the individual SMART goals).</description>
    <label>Case Plan</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Case Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>