force-app/main/default/objects/Case_Plan__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advocate who authored / owns this plan. Auto-defaults to current user.</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Case Plans Authored</relationshipLabel>
    <relationshipName>Case_Plans_Authored</relationshipName>
    <type>Lookup</type>
</CustomField>