force-app/main/default/objects/Case_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The survivor (Contact) this case plan is for.</description>
    <label>Survivor (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Plans</relationshipLabel>
    <relationshipName>Case_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>