force-app/main/default/objects/Case_Plan__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Intake/case this plan is for. One plan per Intake (multiple intakes possible per survivor over time).</description>
    <label>Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Case Plans</relationshipLabel>
    <relationshipName>Case_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>