force-app/main/default/objects/Case_Plan__c/fields/Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When this plan was created/last revised.</description>
    <label>Plan Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>