force-app/main/default/objects/Case_Plan__c/fields/Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Plan_Notes__c</fullName>
    <description>Free-text overview of the plan: what the survivor is working on, key context, plan-level notes that don't fit on individual goals.</description>
    <label>Plan Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>