force-app/main/default/objects/Case_Plan__c/fields/Target_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Exit_Date__c</fullName>
    <description>Target date for case closure / survivor exit. Aspirational, not contractual.</description>
    <label>Target Exit Date</label>
    <type>Date</type>
</CustomField>