force-app/main/default/objects/Case_Plan__c/listViews/Active_Plans.listView-meta.xml
<ListView>
    <fullName>Active_Plans</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Plan_Date__c</columns>
    <columns>Target_Exit_Date__c</columns>
    <columns>Author__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Plans</label>
</ListView>